fixed carousel overflow, needed to add max height property

--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -6,8 +6,11 @@
 .carousel-parent img{
     width: 100%;
     height:  100%;
-    /* overflow: hidden; */
     object-fit: cover;
+}
+
+.under-carousel-text:hover{
+    color: white;
 }
 
 .img-row{
@@ -23,10 +26,12 @@
 .banner-text{
     position: absolute;
     top: 50%;
-    right: 50%;
+    /* right: 50%; */
     color: white;
     padding-left: 1.5em;
+    margin: auto;
 }
+
 
 .home-slider{
     position: relative;
@@ -108,6 +113,9 @@
     .carousel-footer{
         height: 10vh;
     }
-
+    .slick-list{
+        max-height: 900px !important;
+        overflow: hidden !important;
+    }
 
 }
